MDEV-8472 BINARY, VARBINARY and BLOB return different warnings on CAST to DECIMAL